# aoc22-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  day01.cpp  day02.cpp  day03.cpp  day04.cpp
input/: README.md
